--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="/resources/demos/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>PROJECT TASK BORED </title>
 
 </head>
 <body>
     <div class="top">
      <H1>TASK BORD</H1> 
-    <P>what plans do we haver for this week ?</P>
+    <P>what plans do we have for this week ?</P>
     </div>
    <!-- this is the modal button from bootstrap -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
