--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>PROJECT TASK BORED </title>
-
+    <link rel="stylesheet" href="assets/style.css">
+    <!-- jquery script at top -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
+                         <title>PROJECT TASK BORED </title>
 </head>
 <body>
     <div class="top">
@@ -16,7 +18,7 @@
     <P>what plans do we have for this week ?</P>
     </div>
    <!-- this is the modal button from bootstrap -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
         ADD TASK
       </button>
         <!-- inbeded datepicker/ input name / descrption -->
@@ -29,14 +31,14 @@
             </div>
             <!-- inside of model  -->
             <div class="modal-body">
-                <input type="text" class="tasktitle" placeholder="Task">
+                <input type="text" id="tasktitle" placeholder="Task">
                 <!-- datepicker jquryui -->
                 <script>
                     $( function() {
                         $( "#datepicker" ).datepicker();
                     } );
                     </script>
-                      <p>Task Date: <input type="text" id="datepicker"></p>
+                      <p>Task Due Date: <input type="text" id="datepicker"></p>
                 <!-- task description model bootstraip  -->
                       <div class="form-floating">
                         <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
@@ -45,12 +47,12 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Add Task</button>
+              <button type="button" id="buttonadd" class="btn btn-primary">Add Task</button>
             </div>
           </div>
         </div>
       </div>
-
+<!-- collomes of tasks -->
  <div class="container text-center">
     <div class="row align-items-start">
       <div class="col1">
@@ -64,16 +66,23 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-<script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
+ <div class="modaldialog">
+    <!-- this is a draggable modal from jqueryui-->
+     <script>
+         $( function() {
+             $( "#draggable" ).draggable();
+            } );
+     </script>
+      <div id="draggable" class="ui-widget-content">
+          <p class="title"></p>
+          <p class="date "></p>
+          <p class="description"></p>
+          <button type="button" class="btn btn-danger">DELETE</button>
+        </div>
+    </div> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="script.js"></script>
-  
-    
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+<script>dayjs().format()</script>
+<script src="script.js"></script>  
 </body>
 </html>
